tests/machine/x/java/group_by_left_join.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsgroup_by_left_join2877924021/001/Main.java:25: error: incompatible types: Object cannot be converted to Map<String,Integer>
			CO _row12 = new CO(c, o);
			                      ^
/tmp/TestCompileValidProgramsgroup_by_left_join2877924021/001/Main.java:38: error: bad operand type Map<String,Integer> for unary operator '!'
		if (!(r.o)) continue;
		    ^
Note: /tmp/TestCompileValidProgramsgroup_by_left_join2877924021/001/Main.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors


  1| let customers = [
  2|   { id: 1, name: "Alice" },